add 1st version API

--- a/.env
+++ b/.env
@@ -10,3 +10,4 @@ JWT_SECRET_KEY="N#kS8Wl@M~K|*z^"
 JWT_SECRET_KEY_EXPIRE_MINUTES_COUNT=15
 JWT_REFRESH_KEY="epwH}na@nKa6zjn"
 JWT_REFRESH_KEY_EXPIRE_HOURS_COUNT=720
+JWT_SECRET_SHARED_KEY_EXPIRE_MINUTES_COUNT=720
