--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ DB_NAME= cloudmemo
 DB_USER= postgres
 DB_PASSWORD=  1234
 DB_PORT= 5432
-
+PORT= 3000
 # JWT settings:
 JWT_SECRET_KEY="N#kS8Wl@M~K|*z^ç"
 JWT_SECRET_KEY_EXPIRE_MINUTES_COUNT=15
